# leapfrogai-backend-llama-cpp-python

./: .gitignore  CODEOWNERS  Dockerfile  Dockerfile.gpu  Dockerfile.gpu.hack  Dockerfile.test  Makefile  README.md  config.example.yaml  main.py  parse_redist.py  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt  zarf-config.yaml  zarf.yaml
.github/workflows/: check-pyproject-requirements.yaml  docker-publish.yaml  e2e.yaml  release-docker-build-push-amd64.yaml  release-docker-build-push-arm64.yaml  release-gpu-artifacts.yaml  release.yaml
scripts/: model_download.py
tests/: test_completion.py
tests/e2e/: README.md  test_e2e.py
